--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" class="h-svh">
 
 <head>
 	<meta charset="utf-8" />
@@ -8,7 +8,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="tap" data-sveltekit-preload-code="viewport" class="h-full">
+<body data-sveltekit-preload-data="tap" data-sveltekit-preload-code="viewport" class="h-svh">
 	<div style="display: contents">
 		%sveltekit.body%
 	</div>
