--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en" class="h-dvh">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8" />
 	<link rel="manifest" href="/manifest.json" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content">
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="tap" data-sveltekit-preload-code="viewport" class="h-dvh">
+<body data-sveltekit-preload-data="tap" data-sveltekit-preload-code="viewport">
 	<div style="display: contents">
 		%sveltekit.body%
 	</div>
